syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.bluecc.hubs.stub";
option java_outer_classname = "ShipmentIssuanceProto";

package domain;

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";
import "google/protobuf/struct.proto";

import "date.proto";
import "timeofday.proto";
import "routines.proto";
import "condition.proto";
import "relay.proto";

// flat-ent: Item Issuance
message ItemIssuanceFlatData {
    option (routines.entity_type) = "ItemIssuance";
    option (routines.keys).keys = "item_issuance_id";
    option (routines.keys).combine = false;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: itemIssuanceId
    string item_issuance_id = 1 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
    string order_id = 2 [(routines.opts).field_type = "id"];
    string order_item_seq_id = 3 [(routines.opts).field_type = "id"];
    string ship_group_seq_id = 4 [(routines.opts).field_type = "id"];
    string inventory_item_id = 5 [(routines.opts).field_type = "id"];
    string shipment_id = 6 [(routines.opts).field_type = "id"];
    string shipment_item_seq_id = 7 [(routines.opts).field_type = "id"];
    string fixed_asset_id = 8 [(routines.opts).field_type = "id"];
    string maint_hist_seq_id = 9 [(routines.opts).field_type = "id"];
    google.protobuf.Timestamp issued_date_time = 10 [(routines.opts).field_type = "date-time"];
    string issued_by_user_login_id = 11 [(routines.opts).field_type = "id-vlong"];
    routines.FixedPoint quantity = 12 [(routines.opts).field_type = "fixed-point"];
    routines.FixedPoint cancel_quantity = 13 [(routines.opts).field_type = "fixed-point"];
    google.protobuf.Timestamp last_updated_tx_stamp = 14 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 15 [(routines.opts).field_type = "date-time"];
    string tenant_id = 16 [(routines.opts).field_type = "id"];
     

    // extra
    google.protobuf.Struct extra = 30;
    map<string, google.protobuf.Any> attachments = 31 ;
}

message ItemIssuanceKey{
    string item_issuance_id = 1 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
}

message ItemIssuanceList{
    repeated ItemIssuanceFlatData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListItemIssuances` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}

